--- a/galeria.html
+++ b/galeria.html
@@ -17,14 +17,14 @@
 
 </body>
 <div>
-    <img src="img/galeria/145-crime-205-unit-00618r.jpg">
-    <img src="img/galeria/178-crime-203-unit-00843r.jpg">
-    <img src="img/galeria/4-8-640x271.jpg">
-    <img src="img/galeria/57467fbe73eba44c932bc655e94b81c66d8b5d51.jpg">
-    <img src="img/galeria/Marvels-The-Punisher-6.jpg">
-    <img src="img/galeria/punisher-s2-8.jpg">
-    <img src="img/galeria/the-punisher-image-9-1020120-800x445.jpg">
-    <img src="img/galeria/the-punisher-season-2-jigsaw-billy-russo.jpg">
+    <img src="img/galeria/145-crime-205-unit-00618r.jpg" alt="zdjęcie postaci">
+    <img src="img/galeria/178-crime-203-unit-00843r.jpg" alt="zdjęcie postaci">
+    <img src="img/galeria/4-8-640x271.jpg" alt="zdjęcie postaci">
+    <img src="img/galeria/57467fbe73eba44c932bc655e94b81c66d8b5d51.jpg" alt="zdjęcie postaci">
+    <img src="img/galeria/Marvels-The-Punisher-6.jpg" alt="zdjęcie postaci">
+    <img src="img/galeria/punisher-s2-8.jpg" alt="zdjęcie postaci">
+    <img src="img/galeria/the-punisher-image-9-1020120-800x445.jpg" alt="zdjęcie postaci">
+    <img src="img/galeria/the-punisher-season-2-jigsaw-billy-russo.jpg" alt="zdjęcie postaci">
 
 </div>
 
