--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Panisher</title>
+    <title>The Punisher</title>
     <link rel="stylesheet" href="index.css">
 
 </head>
@@ -17,7 +17,7 @@
     </nav>
     <header>
         <h1>The Punisher</h1>
-        <img src="img/7808043.3.jpg">
+        <img src="img/7808043.3.jpg" alt="zdjęcie postaci">
         <h3>Rok wydania(2017-)<br>Gatunek serialu: Akcja<br>
             Po dokonaniu krwawej zemsty na winnych śmierci swojej żony i dzieci Frank Castle, znany jako
             Punisher, odkrywa spisek, który wykracza daleko poza nowojorski półświatek. Czy Frank dotrze do prawdy o
