--- a/obsada.html
+++ b/obsada.html
@@ -25,27 +25,27 @@
             <tr>
                 <td>Jon Bernthal</td>
                 <td>Frank Castle / Punisher</td>
-                <td><img src="img/castle.jpg" width="250px" height="300px"></td>
+                <td><img src="img/castle.jpg" width="250px" height="300px" alt="zdjęcie postaci"></td>
             </tr>
             <tr>
                 <td>Ebon Moss-Bachrach</td>
                 <td>David Lieberman / Micro</td>
-                <td><img src="img/david_lieberman.jpg" width="250px" height="300px"></td>
+                <td><img src="img/david_lieberman.jpg" width="250px" height="300px" alt="zdjęcie postaci"></td>
             </tr>
             <tr>
                 <td>Amber Rose Revah</td>
                 <td>Dinah Madani</td>
-                <td><img src="img/Dinah_Madani.jpg" width="250px" height="300px"></td>
+                <td><img src="img/Dinah_Madani.jpg" width="250px" height="300px" alt="zdjęcie postaci"></td>
             </tr>
             <tr>
                 <td>Daniel Webber</td>
                 <td>Lewis Wilson</td>
-                <td><img src="img/LewisWilson.jpg" width="250px" height="300px"></td>
+                <td><img src="img/LewisWilson.jpg" width="250px" height="300px" alt="zdjęcie postaci"></td>
             </tr>
             <tr>
                 <td>Jason R. Moore</td>
                 <td>Curtis Hoyle</td>
-                <td><img src="img/curtis_hoyle.jpg" width="250px" height="300px"></td>
+                <td><img src="img/curtis_hoyle.jpg" width="250px" height="300px" alt="zdjęcie postaci"></td>
             </tr>
         </table>
     </div>
